# macroscope-seo-engine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: blog-writer.md  market-watcher.md  publisher.md  research-brief-writer.md  seo-aeo-editor.md  topic-researcher.md  topic-scorer.md
.claude/commands/: daily-blog.md  export-doc.md  run-research.md  score-topics.md
.claude/skills/competitor-gap/: SKILL.md
.claude/skills/faq-extractor/: SKILL.md
.claude/skills/internal-linker/: SKILL.md
.claude/skills/serp-audit/: SKILL.md
app/: __init__.py  config.py  dashboard.py  dashboard_runtime.py  docs_export.py  ensemble.py  guardrails.py  history.py  judges.py  main.py  openai_providers.py  orchestrator.py  prompts.py  providers.py  qa.py  schemas.py  scoring.py  storage.py
app/static/: dashboard.css
app/templates/: dashboard.html
config/: aeo_rules.md  brand_context.md  competitors.yaml  forbidden_claims.yaml  seo_rules.md  style_guide.md  topic_clusters.yaml
data/: topic_history.json
docs/: ensemble-pipeline-blueprint.md
tests/: test_config_runtime.py  test_dashboard_runtime.py  test_ensemble.py  test_guardrails.py  test_history.py  test_judges.py  test_main.py  test_providers.py  test_qa.py  test_resume_journal.py  test_schemas.py  test_scoring.py  test_token_reduction_pipeline.py
