[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macroscope-seo-engine"
version = "0.1.0"
description = "Multi-agent content orchestration system for Macroscope SEO/AEO blog production"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.5,<3",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "httpx>=0.25",
    "tenacity>=8.2",
    "python-slugify>=8.0",
    "openai>=2.26.0",
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "psutil>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
seo-engine = "app.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
